[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]<1.0.0,>=0.114.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>2.0",
    "redis>=8.0.0",
    "sqlmodel>=0.0.39",
]

[tool.fastapi]
entrypoint = "app.main:app"
